
$Id$
$HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyAdmin/ChangeLog $

3.3.8.0 (not yet released)
- bug #3059311 [import] BIGINT field type added to table analysis
- [core] Update library PHPExcel to version 1.7.4
- bug #3062455 [core] copy procedures and routines before tables
- bug #3062455 [export] with SQL, export procedures and routines before tables

3.3.7.0 (2010-09-07)
- patch #3050492 [PDF scratchboard] Cannot drag table box to the edge after
  a page size increase, thanks to Martin Schönberger - mad05
- bug #3054458 [core] Fixed displaying number of rows.
- bug #3035300 [parser] Fixed wrong definition of keywords.
- [setup] Fixed escaping of server name.

3.3.6.0 (2010-08-28)
- bug #3033063 [core] Navi gets wrong db name
- bug #3031705 [core] Fix generating condition for real numbers by comparing
  them to string.
- bug #3034026 [confirmation] TRUNCATE queries get no confirmation request
- bug #3036132 [core] Triggers not fetched if dbname has an hyphen
- patch #3039269 [dbi] Wrong variable checked for nopassword option,
  thanks to Will Palmer - wpalmer
- bug #3040226 [XHTML] LockFromUpdate checkbox not checked by default
- bug [doc] Withdraw or edit FAQ entries related to older MySQL or PHP 
- bug #3042706 [pmadb] Relations, bookmarks, etc deleted after table drop
- bug #3044189 [doc] Cleared documentation for hide_db.
- bug #3042495 [core] Move PMA_sendHeaderLocation to core.lib.php.

3.3.5.1 (2010-08-20)
- [core] Fixed various XSS issues, see PMASA-2010-5 for more details.

3.3.5.0 (2010-07-26)
- patch #2932113 [information_schema] Slow export when having lots of
  databases, thanks to Stéphane Pontier - shadow_walker
- bug #3022705 [import] Import button does not work in Catalan when there
  is no progress bar possible
- bug [replication] Do not offer information_schema in the list of databases
- bug [js] Avoid loading twice a js file
- bug #3024344 [setup] Setup forces numeric MemoryLimit